Agregar componente Header y configurar DaisyUI en Tailwind CSS

--- a/cristianoso19/src/pages/index.astro
+++ b/cristianoso19/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
+import Header from "../components/Header.astro"
+
 
 ---
 
-<html lang="en">
+<html lang="en" data-theme="night">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -11,6 +13,7 @@
 		<title>Astro</title>
 	</head>
 	<body>
+		<Header />
 		<h1>Astro</h1>
 	</body>
 </html>
