Agregar Prettier y plugin para Astro, actualizar dependencias en package.json y package-lock.json

--- a/cristianoso19/src/components/Header.astro
+++ b/cristianoso19/src/components/Header.astro
@@ -52,7 +52,5 @@
       <li><a>Item 3</a></li>
     </ul>
   </div>
-  <div class="navbar-end">
-
-  </div>
+  <div class="navbar-end"></div>
 </div>
