--- a/cristianoso19/src/pages/index.astro
+++ b/cristianoso19/src/pages/index.astro
@@ -13,7 +13,7 @@ import Header from "../components/Header.astro"
 		<title>Astro</title>
 	</head>
 	<body>
-		<Header />
+		<Header title="cristianoso19.dev"/>
 		<h1>Astro</h1>
 	</body>
 </html>
