--- a/cristianoso19/src/pages/index.astro
+++ b/cristianoso19/src/pages/index.astro
@@ -1,19 +1,12 @@
 ---
+import Layout from "../layouts/Layout.astro"
 import Header from "../components/Header.astro"
 
 
 ---
-
-<html lang="en" data-theme="night">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<Header title="cristianoso19.dev"/>
-		<h1>Astro</h1>
-	</body>
-</html>
+<Layout title="Welcome to Astro.">
+	<main>
+		<Header title="cristianoso19" />
+		<h1 class="font-bold my-8 text-6xl text-center">Portfolio</h1>
+	</main>
+</Layout>
