Actualizar el README y mejorar la página principal con nueva estructura y contenido

--- a/cristianoso19/src/pages/index.astro
+++ b/cristianoso19/src/pages/index.astro
@@ -1,12 +1,30 @@
 ---
-import Layout from "../layouts/Layout.astro"
-import Header from "../components/Header.astro"
-
-
+import Layout from "../layouts/Layout.astro";
+import Header from "../components/Header.astro";
 ---
+
 <Layout title="Welcome to Astro.">
-	<main>
-		<Header title="cristianoso19" />
-		<h1 class="font-bold my-8 text-6xl text-center">Portfolio</h1>
-	</main>
+  <main class="max-w-[768px] mx-auto">
+    <Header title="cristianoso19" />
+    <h1 class="font-bold my-8 text-6xl text-center">Hi, I'm Cristian 👋</h1>
+    <h3 class="my-8 text-2xl text-left">
+      Fullstack developer, i'm in love with techonology, and love build things
+      to help people
+    </h3>
+    <h3 class="font-bold my-4 text-2xl text-left">About</h3>
+    <p>
+      I'm a passionate tech enthusiast from Cuenca, Ecuador, with a background
+      that bridges accounting and tech. After years of experience in finance and
+      as a Human Talent Analyst managing a 30-person team at an ISP, I've
+      committed to web development, bringing a hands-on, adaptable approach.
+      With a solid tech stack in Python, JavaScript, CSS, React, Django, and
+      database management, I’m ready to dive into impactful software projects.
+      Fluent in English (B2) and a native Spanish speaker, I'm driven by
+      loyalty, resilience, and a vision to build solutions used by millions.
+      Let’s innovate together!
+    </p>
+    <h3 class="font-bold my-4 text-2xl text-left">Work Experience</h3>
+
+    <h1 class="font-bold my-8 text-6xl text-center">Portfolio</h1>
+  </main>
 </Layout>
