Actualizar la estructura de la página principal: cambiar 'Work Experience' a 'Skills' y agregar secciones para 'Portfolio' y 'Contact'

--- a/cristianoso19/src/pages/index.astro
+++ b/cristianoso19/src/pages/index.astro
@@ -23,8 +23,9 @@ import Header from "../components/Header.astro";
       loyalty, resilience, and a vision to build solutions used by millions.
       Let’s innovate together!
     </p>
-    <h3 class="font-bold my-4 text-2xl text-left">Work Experience</h3>
-
-    <h1 class="font-bold my-8 text-6xl text-center">Portfolio</h1>
+    <h3 class="font-bold my-4 text-2xl text-left">Skills</h3>
+	
+    <h3 class="font-bold my-4 text-2xl text-left">Portfolio</h3>
+    <h3 class="font-bold my-4 text-2xl text-left">Contact</h3>
   </main>
 </Layout>
