Agregar componentes Skills y Frameworks a la página principal

--- a/cristianoso19/src/pages/index.astro
+++ b/cristianoso19/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Header from "../components/Header.astro";
+import Skills from "../components/Skills.astro";
+import Frameworks from "../components/Frameworks.astro";
 ---
 
 <Layout title="Welcome to Astro.">
@@ -24,7 +26,9 @@ import Header from "../components/Header.astro";
       Let’s innovate together!
     </p>
     <h3 class="font-bold my-4 text-2xl text-left">Skills</h3>
-	
+	<Skills />
+    <h3 class="font-bold my-4 text-2xl text-left">Frameworks</h3>
+	<Frameworks />
     <h3 class="font-bold my-4 text-2xl text-left">Portfolio</h3>
     <h3 class="font-bold my-4 text-2xl text-left">Contact</h3>
   </main>
