Actualizar configuración de Prettier y agregar nuevos componentes de diseño; mejorar la estructura de la página de inicio y la página de proyectos

--- a/cristianoso19/src/pages/index.astro
+++ b/cristianoso19/src/pages/index.astro
@@ -1,42 +1,38 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Header from "../components/Header.astro";
 import Skills from "../components/Skills.astro";
 import Frameworks from "../components/Frameworks.astro";
 import Projects from "../components/Projects.astro";
 ---
 
 <Layout title="Welcome to Astro.">
-  <main class="max-w-[768px] mx-auto">
-    <Header title="cristianoso19" />
-    <h1 class="font-bold my-8 text-6xl text-center">Hi, I'm Cristian 👋</h1>
-    <h3 class="my-8 text-2xl text-left">
-      Fullstack developer, i'm in love with techonology, and love build things
-      to help people
-    </h3>
-    <h3 class="font-bold my-4 text-2xl text-left">About</h3>
-    <p>
-      I'm a passionate tech enthusiast from Cuenca, Ecuador, with a background
-      that bridges accounting and tech. After years of experience in finance and
-      as a Human Talent Analyst managing a 30-person team at an ISP, I've
-      committed to web development, bringing a hands-on, adaptable approach.
-      With a solid tech stack in Python, JavaScript, CSS, React, Django, and
-      database management, I’m ready to dive into impactful software projects.
-      Fluent in English (B2) and a native Spanish speaker, I'm driven by
-      loyalty, resilience, and a vision to build solutions used by millions.
-      Let’s innovate together!
-    </p>
-    <h3 class="font-bold my-4 text-2xl text-left">Skills</h3>
-    <Skills />
-    <h3 class="font-bold my-4 text-2xl text-left">Frameworks</h3>
-    <Frameworks />
-    <h3 class="font-bold my-4 text-2xl text-left">My projects</h3>
-    <h4 class="my-4 text-xl text-left text-slate-500">
-      Explore some of my recent projects, where I blend creativity and technical
-      expertise to deliver impactful solutions:
-    </h4>
-	<Projects />
+  <h1 class="font-bold my-8 text-6xl text-center">Hi, I'm Cristian 👋</h1>
+  <h3 class="my-8 text-2xl text-left">
+    Fullstack developer, i'm in love with techonology, and love build things to
+    help people
+  </h3>
+  <h3 class="font-bold my-4 text-2xl text-left">About</h3>
+  <p>
+    I'm a passionate tech enthusiast from Cuenca, Ecuador, with a background
+    that bridges accounting and tech. After years of experience in finance and
+    as a Human Talent Analyst managing a 30-person team at an ISP, I've
+    committed to web development, bringing a hands-on, adaptable approach. With
+    a solid tech stack in Python, JavaScript, CSS, React, Django, and database
+    management, I’m ready to dive into impactful software projects. Fluent in
+    English (B2) and a native Spanish speaker, I'm driven by loyalty,
+    resilience, and a vision to build solutions used by millions. Let’s innovate
+    together!
+  </p>
+  <h3 class="font-bold my-4 text-2xl text-left">Skills</h3>
+  <Skills />
+  <h3 class="font-bold my-4 text-2xl text-left">Frameworks</h3>
+  <Frameworks />
+  <h3 class="font-bold my-4 text-2xl text-left">My projects</h3>
+  <h4 class="my-4 text-xl text-left text-slate-500">
+    Explore some of my recent projects, where I blend creativity and technical
+    expertise to deliver impactful solutions:
+  </h4>
+  <Projects />
 
-    <h3 class="font-bold my-4 text-2xl text-left">Contact</h3>
-  </main>
+  <h3 class="font-bold my-4 text-2xl text-left">Contact</h3>
 </Layout>
