--- a/cristianoso19/src/layouts/Layout.astro
+++ b/cristianoso19/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Header from '../components/Header.astro';
 export interface Props {
 	title: string;
 }
@@ -14,7 +15,11 @@ const { title } = Astro.props;
 		<title>Astro</title>
 	</head>
 	<body>
-		<slot />
+		<main class="max-w-[1024px] mx-auto">
+    		<Header title="cristianoso19" />
+			<slot />
+
+		</main>
 	</body>
 </html>
 
