--- a/cristianoso19/src/layouts/Layout.astro
+++ b/cristianoso19/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import {ViewTransitions} from 'astro:transitions';
 export interface Props {
 	title: string;
 }
@@ -11,7 +12,8 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>{title}</title>
+		<ViewTransitions/>
 	</head>
 	<body>
 		<slot />
